# dr-downloader

./: .gitignore  Cargo.toml  README.md  TODO.md  config.toml  debug.json  rust.yml  video_0.m3u8
.github/workflows/: rust.yml
src/: cacher.rs  converter.rs  downloader.rs  error.rs  event.rs  event_subscriber.rs  format.rs  lib.rs  main.rs  models.rs  requester.rs  saver.rs  util.rs  win32.rs
src/downloader/: urltype.rs
src/error/: generic_error.rs  mod.rs  ok_or_generic.rs
src/models/: episode.rs
