[package]
name = "dr-downloader"
version = "0.4.0"
authors = ["Frederik P. B. H. <frepbh@gmail.com>"]
edition = "2018"
repository = "https://github.com/F0903/dr-downloader"
description = "A package for downloading media from DR-TV"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
regex = "^1.4"
tokio = { version = "^1.5", features = ["rt", "rt-multi-thread", "macros", "sync"] }
async-recursion = "^0.3"
reqwest = "^0.11"
serde_json = "^1.0"
lazy_static = "^1.4"
futures = { version = "^0.3", features = ["executor"] }
rayon = "^1.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = [
	"playsoundapi",
	"consoleapi",
	"errhandlingapi",
	"processenv",
	"winbase",
] }
winreg = "^0.8"
