[package]
name = "dr-downloader"
version = "0.5.3"
keywords = ["downloader", "dr", "drtv", "async"]
authors = ["Frederik P. B. H. <frepbh@gmail.com>"]
edition = "2018"
repository = "https://github.com/F0903/dr-downloader"
description = "A package for downloading media from DR-TV"
license = "0BSD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
regex = "^1"
tokio = { version = "^1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
] }
async-recursion = "^0.3"
reqwest = "^0.11"
serde_json = "^1"
lazy_static = "^1"
futures = { version = "^0.3", features = ["executor"] }
rayon = "^1"

[target.'cfg(windows)'.dependencies]
winreg = "^0.9"
