[package]
name = "dr-downloader"
version = "0.6.2"
keywords = ["downloader", "dr", "drtv", "async"]
authors = ["Frederik P. B. H. <frepbh@gmail.com>"]
edition = "2021"
repository = "https://github.com/F0903/dr-downloader"
description = "A package for downloading media from DR-TV"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true

[lib]
crate-type = ["lib"]

[dependencies]
regex = "^1"
tokio = { version = "^1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
] }
async-recursion = "^1"
reqwest = "^0.11"
serde_json = "^1"
lazy_static = "^1"
futures = { version = "^0.3", features = ["executor"] }
rayon = "^1"

[target.'cfg(windows)'.dependencies]
winreg = "^0.10"
